add config url to project